Update pom.xml dan ci.yml