@@ -145,6 +145,17 @@
 				</configuration>
 			</plugin>
 
+			<build>
+					<plugins>
+							<plugin>
+									<groupId>org.apache.maven.plugins</groupId>
+									<artifactId>maven-surefire-plugin</artifactId>
+									<configuration>
+											<argLine>-Dnet.bytebuddy.experimental=true</argLine>
+									</configuration>
+							</plugin>
+					</plugins>
+			</build>
 			<!-- JaCoCo Coverage -->
 			<plugin>
 				<groupId>org.jacoco</groupId>
